Fix layout issues with manual pages

--- a/style.css
+++ b/style.css
@@ -331,6 +331,11 @@ font-size:1rem;
 color:var(--text_colour);
 border-radius:5px;
 }
+.manual-container > .manual-index > .manual-index-item {
+padding:1px;
+text-decoration:none;
+color:var(--text_colour);
+}
 .manual-container > .manual-index > .manual-index-item > a{
 padding:4px;
 text-decoration:none;
@@ -342,12 +347,14 @@ background:var(--logo_main_colour2);
 color:var(--main-background);
 padding-top:0px;
 padding-bottom:0px;
+border-radius:6px;
 }
 .manual-container > .manual-page {
 background-color:var(--header_background);
 flex: 10 0 10em;
 margin: 10px;
 padding-left: 20px;
+padding-right: 20px;
 font-size:1rem;
 color:var(--text_colour);
 border-radius:5px;
